--- a/00_setup.ipynb
+++ b/00_setup.ipynb
@@ -2,8 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1746223a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "091d9255-523a-4f23-8b17-8a94d8a0e1f3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Inicjalizacja kontekstu użytkownika\n",
     "\n",
@@ -12,9 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75076030",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8e047da8-3e6c-46d1-9153-094034c7a9d4",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "1": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"dataset_path\":322},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1763579086288}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 1
+      }
+     },
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# === Konfiguracja katalogów i schematów ===\n",
@@ -91,10 +120,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "00_setup",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
