--- a/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/02_medallion_architecture.ipynb
@@ -2,8 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f981b44",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "577fb86f-84ed-49a2-b1a1-aa785feceefc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "# Medallion Architecture - Demo\n",
     "\n",
@@ -20,8 +28,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b2683f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "25cba1ec-bc2f-4a95-8b19-097852590dfa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Kontekst i wymagania\n",
     "\n",
@@ -36,8 +52,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a337419",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1aefc3a3-9caf-4ec6-a347-da3087d56868",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Wstęp teoretyczny\n",
     "\n",
@@ -55,8 +79,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d2f04e",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9a3390ab-18af-48bd-a851-c545b46dff6f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Izolacja per użytkownik\n",
     "\n",
@@ -65,9 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6bccada9",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6ac68da3-6d62-499e-8d3c-ae1c283c823e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "%run ../00_setup"
@@ -75,8 +118,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be9e99f",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fb179fb0-e5d9-4e48-9982-2a9c96ded80c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Konfiguracja\n",
     "\n",
@@ -85,9 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b710fd1",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "30106da3-ad9d-4d3e-9a61-34dbf776e11b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import functions as F\n",
@@ -116,8 +178,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723d9642",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "abfc7abf-3ec7-454a-92f9-24890b34f7e1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -140,8 +210,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d1d319e",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d3d610af-9496-4c55-ad10-005930465309",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.1: Bronze Layer - Raw Data Landing\n",
     "\n",
@@ -155,9 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e96dc9e7",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9db9ee0f-d63e-4cc5-bd1b-5ca221129d09",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.1 - Bronze Layer\n",
@@ -205,8 +291,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18e7e9c1",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a1489eec-edc1-4cd0-88a2-7d1baff81de4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Wyjaśnienie:**\n",
     "\n",
@@ -219,8 +313,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b66494",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a2baf140-5390-469b-9604-301840271fff",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.2: Silver Layer - Cleansed & Validated\n",
     "\n",
@@ -229,9 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7aae702",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "35a4cccb-7941-45d4-8ed7-fd78138541cc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.2 - Silver Layer\n",
@@ -291,8 +401,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2983a914",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "76fb36bc-5d0a-4db0-b028-b3cb02034c27",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Wyjaśnienie:**\n",
     "\n",
@@ -305,8 +423,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec7a4b59",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2c576e84-79c6-4c93-bf0d-88c90f91605c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 1.3: Gold Layer - Business Aggregates\n",
     "\n",
@@ -315,9 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "77d24c4c",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "edabca41-15fd-4541-a942-400411614814",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 1.3 - Gold Layer: Daily Order Summary\n",
@@ -364,8 +498,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2eccaf7",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d958525c-9c99-4f91-bf6d-ff0c23db890e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Wyjaśnienie:**\n",
     "\n",
@@ -378,8 +520,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e27fbe6",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5cdff76a-5207-406e-8143-390d787b3c20",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -397,8 +547,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "add2cdb3",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e5467410-81ef-454e-85dd-7a4a0124f6c8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 2.1: ELT Pipeline - Incremental Processing\n",
     "\n",
@@ -407,9 +565,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "24434709",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "dd361f35-381a-4bc1-a9f2-afbbe5145050",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 2.1 - Incremental ELT\n",
@@ -508,8 +674,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d74784",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "24775669-45c9-488f-b469-a191bc8dc0ee",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Wyjaśnienie:**\n",
     "\n",
@@ -523,8 +697,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce651ab0",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "412caac0-e7bf-4337-8060-dbaad7a6810f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -543,8 +725,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9736f0ed",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ed299e03-b38d-4e07-bfea-9693a406dd6b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "### Przykład 3.1: Partycjonowanie Silver layer po dacie\n",
     "\n",
@@ -553,9 +743,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "67223f08",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "af3de11d-a1d2-4f0b-b425-f1a50ec9c063",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Przykład 3.1 - Partitioned Silver table\n",
@@ -588,8 +786,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e860ca",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "08f316d1-6f5f-44d5-b872-b68d6c12dde9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "**Wyjaśnienie:**\n",
     "\n",
@@ -603,8 +809,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed13ed12",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f8bcafb4-68ad-4411-96ac-9bd78d08760d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -633,8 +847,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a803003",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "eb006e4f-619f-46ac-b83f-b8b7530398d9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -674,8 +896,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d62c70a",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "11249d20-d238-4d58-a93f-8811a5089d1b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -712,8 +942,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6d991fb",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2fbc8fff-4a63-438d-91db-6270c0dbe262",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "---\n",
     "\n",
@@ -724,9 +962,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29c14eda",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e282e534-095c-48b6-ba80-eefa389da3f1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Opcjonalne czyszczenie zasobów testowych\n",
@@ -743,10 +989,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "02_medallion_architecture",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
