--- a/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/02_data_import_exploration.ipynb
@@ -437,6 +437,21 @@
    },
    "outputs": [],
    "source": [
+    "# Definicja schematu dla customers\n",
+    "# Struktura rzeczywista: customer_id, first_name, last_name, email, phone, city, state, country, registration_date, customer_segment\n",
+    "customers_schema = StructType([\n",
+    "    StructField(\"customer_id\", StringType(), nullable=False),\n",
+    "    StructField(\"first_name\", StringType(), nullable=True),\n",
+    "    StructField(\"last_name\", StringType(), nullable=True), \n",
+    "    StructField(\"email\", StringType(), nullable=True),\n",
+    "    StructField(\"phone\", StringType(), nullable=True),\n",
+    "    StructField(\"city\", StringType(), nullable=True),\n",
+    "    StructField(\"state\", StringType(), nullable=True),\n",
+    "    StructField(\"country\", StringType(), nullable=True),\n",
+    "    StructField(\"registration_date\", StringType(), nullable=True),  # Date as string, will convert later\n",
+    "    StructField(\"customer_segment\", StringType(), nullable=True)\n",
+    "])\n",
+    "\n",
     "# Statystyki opisowe (count, mean, stddev, min, max)\n",
     "print(\" Statystyki opisowe (describe):\")\n",
     "customers_auto_df.describe().display()"
@@ -817,16 +832,21 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.types import DoubleType\n",
+    "from pyspark.sql.types import DoubleType, StringType, StructField, StructType, TimestampType, IntegerType\n",
     "\n",
     "# Definicja schematu dla orders\n",
-    "# Struktura: order_id (string), customer_id (string), order_date (timestamp), total_amount (double), status (string) - ponizsza struktura jest bledna aby pokzac jak schemat jest istotny w kontekscie deklaracji tabeli\n",
+    "# Struktura rzeczywista: order_id, customer_id, product_id, store_id, order_datetime, quantity, unit_price, discount_percent, total_amount, payment_method\n",
     "orders_schema = StructType([\n",
-    "    StructField(\"order_id\", IntegerType(), nullable=False),\n",
-    "    StructField(\"customer_id\", IntegerType(), nullable=True),\n",
-    "    StructField(\"order_datetime\", TimestampType(), nullable=True),\n",
-    "    StructField(\"total_amount\", DoubleType(), nullable=True),\n",
-    "    StructField(\"status\", StringType(), nullable=True)\n",
+    "    StructField(\"order_id\", StringType(), nullable=True),  # Może być null w danych\n",
+    "    StructField(\"customer_id\", StringType(), nullable=False),\n",
+    "    StructField(\"product_id\", StringType(), nullable=False),\n",
+    "    StructField(\"store_id\", StringType(), nullable=False),\n",
+    "    StructField(\"order_datetime\", StringType(), nullable=True),  # String, will convert to timestamp later\n",
+    "    StructField(\"quantity\", IntegerType(), nullable=False),\n",
+    "    StructField(\"unit_price\", DoubleType(), nullable=False),\n",
+    "    StructField(\"discount_percent\", IntegerType(), nullable=False),\n",
+    "    StructField(\"total_amount\", DoubleType(), nullable=False),\n",
+    "    StructField(\"payment_method\", StringType(), nullable=False)\n",
     "])"
    ]
   },
