--- a/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
+++ b/DZIEN_1_Fundamentals_Exploration/04_data_cleaning_quality.ipynb
@@ -470,12 +470,12 @@
     "# RESOURCE: DataFrame df_customers\n",
     "# VARIABLE: df_filled - DataFrame z wypełnionymi wartościami null\n",
     "\n",
-    "# Strategia wypełniania wartości null\n",
+    "# Strategia wypełniania wartości null - tylko dla kolumn które rzeczywiście mogą mieć nulls\n",
     "fill_values = {\n",
-    "    \"phone\": \"brak\",\n",
-    "    \"email\": \"unknown@example.com\",\n",
+    "    \"phone\": \"brak telefonu\",\n",
     "    \"city\": \"Unknown\",\n",
-    "    \"country\": \"Poland\"\n",
+    "    \"state\": \"Unknown\",\n",
+    "    \"country\": \"Unknown\"\n",
     "}\n",
     "\n",
     "# Wypełnienie wartości null\n",
@@ -492,7 +492,8 @@
     "print(\"\\n=== Przykładowe wypełnione rekordy ===\")\n",
     "display(df_filled.filter(\n",
     "    df_customers[\"phone\"].isNull() | \n",
-    "    df_customers[\"email\"].isNull()\n",
+    "    df_customers[\"city\"].isNull() |\n",
+    "    df_customers[\"state\"].isNull()\n",
     ").limit(5))"
    ]
   },
@@ -606,14 +607,25 @@
     "    coalesce(F.col(\"email\"), F.col(\"phone\"), lit(\"brak kontaktu\"))\n",
     ")\n",
     "\n",
+    "# Stwórz pełny adres z dostępnych pól\n",
+    "df_with_contact = df_with_contact.withColumn(\n",
+    "    \"full_address\",\n",
+    "    coalesce(\n",
+    "        F.concat_ws(\", \", F.col(\"city\"), F.col(\"state\"), F.col(\"country\")),\n",
+    "        F.concat_ws(\", \", F.col(\"city\"), F.col(\"country\")),\n",
+    "        F.col(\"country\"),\n",
+    "        lit(\"Address Unknown\")\n",
+    "    )\n",
+    ")\n",
+    "\n",
     "# Weryfikacja\n",
     "print(\"=== Analiza primary_contact ===\")\n",
     "contact_stats = df_with_contact.groupBy(\"primary_contact\").count().orderBy(F.desc(\"count\"))\n",
     "display(contact_stats.limit(10))\n",
     "\n",
     "# Przykłady\n",
-    "print(\"\\n=== Przykładowe rekordy z primary_contact ===\")\n",
-    "display(df_with_contact.select(\"customer_id\", \"email\", \"phone\", \"primary_contact\").limit(10))"
+    "print(\"\\n=== Przykładowe rekordy z primary_contact i full_address ===\")\n",
+    "display(df_with_contact.select(\"customer_id\", \"email\", \"phone\", \"primary_contact\", \"city\", \"state\", \"country\", \"full_address\").limit(10))"
    ]
   },
   {
@@ -697,40 +709,52 @@
     "# RESOURCE: DataFrame df_customers\n",
     "# VARIABLE: df_typed - DataFrame z poprawnie skonwertowanymi typami\n",
     "\n",
-    "# Przykład: Konwersja kolumny age (jeśli jest jako string) na integer\n",
-    "# oraz loyalty_points na double\n",
-    "\n",
+    "# Przykład: Walidacja dat rejestracji i dodanie flag jakości\n",
     "df_typed = df_customers\n",
     "\n",
-    "# Konwersja age - usunięcie non-numeric characters, cast to int, walidacja zakresu\n",
-    "if df_customers.schema[\"age\"].dataType == StringType():\n",
-    "    df_typed = df_typed \\\n",
-    "        .withColumn(\"age_clean\", F.regexp_replace(F.col(\"age\"), \"[^0-9]\", \"\")) \\\n",
-    "        .withColumn(\"age\", F.col(\"age_clean\").cast(\"int\")) \\\n",
-    "        .drop(\"age_clean\")\n",
-    "\n",
-    "# Walidacja zakresu age (18-120)\n",
+    "# Parsowanie registration_date i walidacja zakresu\n",
     "df_typed = df_typed.withColumn(\n",
-    "    \"age_valid\",\n",
-    "    (F.col(\"age\").isNotNull()) & \n",
-    "    (F.col(\"age\") >= 18) & \n",
-    "    (F.col(\"age\") <= 120)\n",
+    "    \"registration_date_parsed\",\n",
+    "    F.to_date(F.col(\"registration_date\"), \"yyyy-MM-dd\")\n",
+    ")\n",
+    "\n",
+    "# Walidacja zakresu dat (2020-2026)\n",
+    "df_typed = df_typed.withColumn(\n",
+    "    \"registration_date_valid\",\n",
+    "    (F.col(\"registration_date_parsed\").isNotNull()) & \n",
+    "    (F.col(\"registration_date_parsed\") >= \"2020-01-01\") & \n",
+    "    (F.col(\"registration_date_parsed\") <= \"2026-12-31\")\n",
+    ")\n",
+    "\n",
+    "# Dodaj wiek konta w dniach\n",
+    "df_typed = df_typed.withColumn(\n",
+    "    \"account_age_days\",\n",
+    "    F.datediff(F.current_date(), F.col(\"registration_date_parsed\"))\n",
+    ")\n",
+    "\n",
+    "# Walidacja email format\n",
+    "df_typed = df_typed.withColumn(\n",
+    "    \"email_valid\",\n",
+    "    (F.col(\"email\").isNotNull()) & \n",
+    "    F.col(\"email\").rlike(\"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\\\.[a-zA-Z]{2,}$\")\n",
     ")\n",
     "\n",
     "# Statystyki konwersji\n",
     "total = df_typed.count()\n",
-    "valid_age = df_typed.filter(F.col(\"age_valid\") == True).count()\n",
-    "invalid_age = df_typed.filter(F.col(\"age_valid\") == False).count()\n",
+    "valid_dates = df_typed.filter(F.col(\"registration_date_valid\") == True).count()\n",
+    "invalid_dates = df_typed.filter(F.col(\"registration_date_valid\") == False).count()\n",
+    "valid_emails = df_typed.filter(F.col(\"email_valid\") == True).count()\n",
     "\n",
-    "print(\"=== Statystyki konwersji age ===\")\n",
+    "print(\"=== Statystyki walidacji ===\")\n",
     "print(f\"Total: {total}\")\n",
-    "print(f\"Valid age: {valid_age} ({(valid_age/total)*100:.1f}%)\")\n",
-    "print(f\"Invalid age: {invalid_age} ({(invalid_age/total)*100:.1f}%)\")\n",
+    "print(f\"Valid registration dates: {valid_dates} ({(valid_dates/total)*100:.1f}%)\")\n",
+    "print(f\"Invalid registration dates: {invalid_dates} ({(invalid_dates/total)*100:.1f}%)\")\n",
+    "print(f\"Valid emails: {valid_emails} ({(valid_emails/total)*100:.1f}%)\")\n",
     "\n",
     "# Przykłady nieprawidłowych wartości\n",
-    "if invalid_age > 0:\n",
-    "    print(\"\\n=== Przykłady nieprawidłowych wartości age ===\")\n",
-    "    display(df_typed.filter(F.col(\"age_valid\") == False).select(\"customer_id\", \"age\", \"age_valid\").limit(5))\n",
+    "if invalid_dates > 0:\n",
+    "    print(\"\\n=== Przykłady nieprawidłowych dat rejestracji ===\")\n",
+    "    display(df_typed.filter(F.col(\"registration_date_valid\") == False).select(\"customer_id\", \"registration_date\", \"registration_date_parsed\", \"registration_date_valid\").limit(5))\n",
     "\n",
     "# Schemat po konwersji\n",
     "print(\"\\n=== Schemat po konwersji ===\")\n",
@@ -1172,18 +1196,21 @@
     "df_standardized = df_customers\n",
     "\n",
     "# 1. Trim whitespace z wszystkich string columns\n",
-    "for col_name in df_standardized.columns:\n",
-    "    if isinstance(df_standardized.schema[col_name].dataType, StringType):\n",
+    "for col_name in [\"first_name\", \"last_name\", \"email\", \"phone\", \"city\", \"state\", \"country\"]:\n",
+    "    if col_name in df_standardized.columns:\n",
     "        df_standardized = df_standardized.withColumn(\n",
     "            col_name,\n",
     "            F.trim(F.col(col_name))\n",
     "        )\n",
     "\n",
     "# 2. Standaryzacja konkretnych kolumn\n",
-    "# customer_name: Title Case (każde słowo z wielkiej litery)\n",
+    "# first_name, last_name: Title Case\n",
     "df_standardized = df_standardized.withColumn(\n",
-    "    \"customer_name\",\n",
-    "    F.initcap(F.col(\"customer_name\"))\n",
+    "    \"first_name\",\n",
+    "    F.initcap(F.col(\"first_name\"))\n",
+    ").withColumn(\n",
+    "    \"last_name\", \n",
+    "    F.initcap(F.col(\"last_name\"))\n",
     ")\n",
     "\n",
     "# email: lowercase (standard dla emaili)\n",
@@ -1192,25 +1219,23 @@
     "    F.lower(F.col(\"email\"))\n",
     ")\n",
     "\n",
-    "# country_code: uppercase (standard ISO dla kodów krajów)\n",
-    "if \"country_code\" in df_standardized.columns:\n",
-    "    df_standardized = df_standardized.withColumn(\n",
-    "        \"country_code\",\n",
-    "        F.upper(F.col(\"country_code\"))\n",
-    "    )\n",
+    "# country: uppercase (standard ISO dla kodów krajów)\n",
+    "df_standardized = df_standardized.withColumn(\n",
+    "    \"country\",\n",
+    "    F.upper(F.col(\"country\"))\n",
+    ")\n",
     "\n",
     "# city: Title Case\n",
-    "if \"city\" in df_standardized.columns:\n",
-    "    df_standardized = df_standardized.withColumn(\n",
-    "        \"city\",\n",
-    "        F.initcap(F.col(\"city\"))\n",
-    "    )\n",
+    "df_standardized = df_standardized.withColumn(\n",
+    "    \"city\",\n",
+    "    F.initcap(F.col(\"city\"))\n",
+    ")\n",
     "\n",
     "# Porównanie przed i po\n",
     "print(\"=== Porównanie standaryzacji ===\")\n",
-    "display(df_customers.select(\"customer_name\", \"email\", \"city\").limit(5))\n",
+    "display(df_customers.select(\"first_name\", \"last_name\", \"email\", \"city\", \"country\").limit(5))\n",
     "print(\"\\n↓↓↓ PO STANDARYZACJI ↓↓↓\\n\")\n",
-    "display(df_standardized.select(\"customer_name\", \"email\", \"city\").limit(5))"
+    "display(df_standardized.select(\"first_name\", \"last_name\", \"email\", \"city\", \"country\").limit(5))"
    ]
   },
   {
@@ -1257,36 +1282,38 @@
     "\n",
     "df_codes_standardized = df_standardized\n",
     "\n",
-    "# 1. Standaryzacja phone numbers (usunięcie wszystkich non-digit, dodanie prefiksu)\n",
+    "# 1. Standaryzacja phone numbers (usunięcie wszystkich non-digit, format międzynarodowy)\n",
     "if \"phone\" in df_codes_standardized.columns:\n",
     "    df_codes_standardized = df_codes_standardized.withColumn(\n",
     "        \"phone_standardized\",\n",
-    "        F.concat(\n",
-    "            lit(\"+48\"),  # Polski prefiks\n",
-    "            F.regexp_replace(F.col(\"phone\"), \"[^0-9]\", \"\")\n",
-    "        )\n",
+    "        F.when(F.col(\"phone\").isNotNull(),\n",
+    "            F.concat(\n",
+    "                F.when(F.col(\"phone\").startswith(\"+\"), \"\")\n",
+    "                 .otherwise(\"+1-\"),  # Domyślny prefiks dla USA\n",
+    "                F.regexp_replace(F.col(\"phone\"), \"[^0-9]\", \"\")\n",
+    "            )\n",
+    "        ).otherwise(F.col(\"phone\"))\n",
     "    )\n",
     "\n",
-    "# 2. Standaryzacja postal_code (format: XX-XXX)\n",
-    "if \"postal_code\" in df_codes_standardized.columns:\n",
+    "# 2. Standaryzacja customer_segment (konsystentne nazewnictwo)\n",
+    "if \"customer_segment\" in df_codes_standardized.columns:\n",
     "    df_codes_standardized = df_codes_standardized.withColumn(\n",
-    "        \"postal_code_standardized\",\n",
-    "        F.concat(\n",
-    "            F.substring(F.regexp_replace(F.col(\"postal_code\"), \"[^0-9]\", \"\"), 1, 2),\n",
-    "            lit(\"-\"),\n",
-    "            F.substring(F.regexp_replace(F.col(\"postal_code\"), \"[^0-9]\", \"\"), 3, 3)\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "# 3. Standaryzacja kategorii (status: mapowanie wariantów)\n",
-    "if \"status\" in df_codes_standardized.columns:\n",
-    "    df_codes_standardized = df_codes_standardized.withColumn(\n",
-    "        \"status_standardized\",\n",
-    "        F.when(F.upper(F.trim(F.col(\"status\"))) == \"ACTIVE\", \"Active\")\n",
-    "         .when(F.upper(F.trim(F.col(\"status\"))) == \"INACTIVE\", \"Inactive\")\n",
-    "         .when(F.upper(F.trim(F.col(\"status\"))) == \"PENDING\", \"Pending\")\n",
+    "        \"customer_segment_standardized\",\n",
+    "        F.when(F.upper(F.trim(F.col(\"customer_segment\"))) == \"PREMIUM\", \"Premium\")\n",
+    "         .when(F.upper(F.trim(F.col(\"customer_segment\"))) == \"STANDARD\", \"Standard\")\n",
+    "         .when(F.upper(F.trim(F.col(\"customer_segment\"))) == \"BASIC\", \"Basic\")\n",
     "         .otherwise(\"Unknown\")\n",
     "    )\n",
+    "\n",
+    "# 3. Standaryzacja country codes (3-letter ISO codes jako przykład)\n",
+    "df_codes_standardized = df_codes_standardized.withColumn(\n",
+    "    \"country_iso\",\n",
+    "    F.when(F.upper(F.col(\"country\")) == \"USA\", \"USA\")\n",
+    "     .when(F.upper(F.col(\"country\")) == \"POLAND\", \"POL\")\n",
+    "     .when(F.upper(F.col(\"country\")) == \"GERMANY\", \"DEU\")\n",
+    "     .when(F.upper(F.col(\"country\")) == \"FRANCE\", \"FRA\")\n",
+    "     .otherwise(F.upper(F.col(\"country\")))\n",
+    ")\n",
     "\n",
     "# Weryfikacja standaryzacji\n",
     "print(\"=== Standaryzacja kodów i kategorii ===\")\n",
@@ -1295,13 +1322,12 @@
     "    print(\"\\n--- Phone numbers ---\")\n",
     "    display(df_codes_standardized.select(\"phone\", \"phone_standardized\").limit(5))\n",
     "\n",
-    "if \"postal_code\" in df_codes_standardized.columns:\n",
-    "    print(\"\\n--- Postal codes ---\")\n",
-    "    display(df_codes_standardized.select(\"postal_code\", \"postal_code_standardized\").limit(5))\n",
+    "if \"customer_segment\" in df_codes_standardized.columns:\n",
+    "    print(\"\\n--- Customer segments ---\")\n",
+    "    display(df_codes_standardized.groupBy(\"customer_segment\", \"customer_segment_standardized\").count().orderBy(\"customer_segment\"))\n",
     "\n",
-    "if \"status\" in df_codes_standardized.columns:\n",
-    "    print(\"\\n--- Status categories ---\")\n",
-    "    display(df_codes_standardized.groupBy(\"status\", \"status_standardized\").count().orderBy(\"status\"))"
+    "print(\"\\n--- Country codes ---\")\n",
+    "display(df_codes_standardized.groupBy(\"country\", \"country_iso\").count().orderBy(\"country\").limit(10))"
    ]
   },
   {
@@ -1374,7 +1400,33 @@
     }
    },
    "source": [
-    "**SQL Equivalent:**"
+    "**SQL Equivalent:**\n",
+    "\n",
+    "```sql\n",
+    "# Najpierw utwórz temporary view\n",
+    "df_customers.createOrReplaceTempView(\"customers_raw\")\n",
+    "\n",
+    "# SQL approach\n",
+    "df_cleaned_sql = spark.sql(\"\"\"\n",
+    "SELECT DISTINCT\n",
+    "    customer_id,\n",
+    "    TRIM(INITCAP(first_name)) as first_name,\n",
+    "    TRIM(INITCAP(last_name)) as last_name,\n",
+    "    LOWER(TRIM(email)) as email,\n",
+    "    COALESCE(city, 'Unknown') as city,\n",
+    "    COALESCE(country, 'Unknown') as country,\n",
+    "    phone,\n",
+    "    registration_date,\n",
+    "    customer_segment\n",
+    "FROM customers_raw\n",
+    "WHERE customer_id IS NOT NULL\n",
+    "    AND email IS NOT NULL\n",
+    "    AND email LIKE '%@%'\n",
+    "\"\"\")\n",
+    "\n",
+    "print(f\"Rekordy po czyszczeniu (SQL): {df_cleaned_sql.count()}\")\n",
+    "display(df_cleaned_sql.limit(5))\n",
+    "```"
    ]
   },
   {
@@ -1491,9 +1543,9 @@
    },
    "outputs": [],
    "source": [
-    "# Weryfikacja wyników - użyj df_cleaned_pyspark lub df_cleaned_sql\n",
+    "# Weryfikacja wyników - użyj df_codes_standardized jako final\n",
     "\n",
-    "df_final = df_cleaned_pyspark  # Lub df_cleaned_sql\n",
+    "df_final = df_codes_standardized\n",
     "\n",
     "print(\"=== WERYFIKACJA WYNIKÓW ===\\n\")\n",
     "\n",
@@ -1502,9 +1554,9 @@
     "print(f\"   Liczba rekordów: {df_final.count()}\")\n",
     "print(f\"   Liczba kolumn: {len(df_final.columns)}\")\n",
     "\n",
-    "# 2. Null values per kolumna\n",
-    "print(\"\\n2. Null values per kolumna:\")\n",
-    "for col_name in df_final.columns:\n",
+    "# 2. Null values per kolumna (sprawdź tylko pierwsze 10 kolumn)\n",
+    "print(\"\\n2. Null values per kolumna (próbka):\")\n",
+    "for col_name in df_final.columns[:10]:  # Pokaż tylko pierwsze 10\n",
     "    null_count = df_final.filter(F.col(col_name).isNull()).count()\n",
     "    print(f\"   {col_name:20s}: {null_count:4d} nulls\")\n",
     "\n",
@@ -1514,13 +1566,14 @@
     "distinct = df_final.distinct().count()\n",
     "print(f\"   Total: {total}, Distinct: {distinct}, Duplicates: {total - distinct}\")\n",
     "\n",
-    "# 4. Schemat danych\n",
+    "# 4. Schemat danych (tylko typy)\n",
     "print(\"\\n4. Schemat danych:\")\n",
-    "df_final.printSchema()\n",
+    "for field in df_final.schema.fields[:10]:  # Pokaż tylko pierwsze 10\n",
+    "    print(f\"   {field.name:20s}: {field.dataType}\")\n",
     "\n",
     "# 5. Podgląd danych\n",
     "print(\"\\n5. Podgląd wyczyszczonych danych:\")\n",
-    "display(df_final.limit(10))\n",
+    "display(df_final.select(\"customer_id\", \"first_name\", \"last_name\", \"email\", \"customer_segment\", \"country\").limit(10))\n",
     "\n",
     "# 6. Testy asercyjne\n",
     "try:\n",
