--- a/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/01_advanced_pyspark_transformations.ipynb
@@ -328,6 +328,258 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc3c775f",
+   "metadata": {},
+   "source": [
+    "### Praktyczny przykład: Analiza koszyka zakupowego\n",
+    "\n",
+    "**Scenariusz biznesowy:** \n",
+    "Mamy zamówienia z listą produktów i chcemy przeanalizować:\n",
+    "- Które produkty są najczęściej kupowane razem\n",
+    "- Średnią liczbę produktów w koszyku\n",
+    "- Top produkty per kategoria klienta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add37719",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dane: Zamówienia z produktami, cenami i kategoriami\n",
+    "basket_data = [\n",
+    "    (101, 1, \"Premium\", \"2024-01-15\", [\n",
+    "        {\"product\": \"Laptop\", \"price\": 1200.0, \"category\": \"Electronics\"},\n",
+    "        {\"product\": \"Mouse\", \"price\": 25.0, \"category\": \"Accessories\"},\n",
+    "        {\"product\": \"Keyboard\", \"price\": 75.0, \"category\": \"Accessories\"},\n",
+    "        {\"product\": \"USB Cable\", \"price\": 10.0, \"category\": \"Accessories\"}\n",
+    "    ]),\n",
+    "    (102, 2, \"Standard\", \"2024-01-16\", [\n",
+    "        {\"product\": \"Monitor\", \"price\": 300.0, \"category\": \"Electronics\"},\n",
+    "        {\"product\": \"HDMI Cable\", \"price\": 15.0, \"category\": \"Accessories\"}\n",
+    "    ]),\n",
+    "    (103, 1, \"Premium\", \"2024-02-10\", [\n",
+    "        {\"product\": \"Headphones\", \"price\": 150.0, \"category\": \"Audio\"},\n",
+    "        {\"product\": \"Laptop\", \"price\": 1200.0, \"category\": \"Electronics\"}\n",
+    "    ]),\n",
+    "    (104, 3, \"Standard\", \"2024-02-12\", [\n",
+    "        {\"product\": \"Tablet\", \"price\": 400.0, \"category\": \"Electronics\"},\n",
+    "        {\"product\": \"Case\", \"price\": 30.0, \"category\": \"Accessories\"},\n",
+    "        {\"product\": \"Stylus\", \"price\": 50.0, \"category\": \"Accessories\"},\n",
+    "        {\"product\": \"Charger\", \"price\": 25.0, \"category\": \"Accessories\"}\n",
+    "    ]),\n",
+    "    (105, 2, \"Premium\", \"2024-03-05\", [\n",
+    "        {\"product\": \"Smartphone\", \"price\": 800.0, \"category\": \"Electronics\"},\n",
+    "        {\"product\": \"Screen Protector\", \"price\": 20.0, \"category\": \"Accessories\"},\n",
+    "        {\"product\": \"Phone Case\", \"price\": 35.0, \"category\": \"Accessories\"}\n",
+    "    ]),\n",
+    "]\n",
+    "\n",
+    "# Schemat dla zagnieżdżonych danych\n",
+    "basket_schema = StructType([\n",
+    "    StructField(\"order_id\", IntegerType(), False),\n",
+    "    StructField(\"customer_id\", IntegerType(), False),\n",
+    "    StructField(\"customer_tier\", StringType(), False),\n",
+    "    StructField(\"order_date\", StringType(), False),\n",
+    "    StructField(\"items\", ArrayType(\n",
+    "        StructType([\n",
+    "            StructField(\"product\", StringType(), False),\n",
+    "            StructField(\"price\", DoubleType(), False),\n",
+    "            StructField(\"category\", StringType(), False)\n",
+    "        ])\n",
+    "    ), False)\n",
+    "])\n",
+    "\n",
+    "basket_df = spark.createDataFrame(basket_data, basket_schema) \\\n",
+    "    .withColumn(\"order_date\", to_date(col(\"order_date\")))\n",
+    "\n",
+    "print(\"📦 Dane oryginalne - zamówienia z zagnieżdżonymi produktami:\")\n",
+    "basket_df.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427b334a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Krok 1: explode() - rozwój zagnieżdżonych produktów\n",
+    "basket_exploded = basket_df.select(\n",
+    "    \"order_id\",\n",
+    "    \"customer_id\",\n",
+    "    \"customer_tier\",\n",
+    "    \"order_date\",\n",
+    "    explode(\"items\").alias(\"item\")\n",
+    ").select(\n",
+    "    \"order_id\",\n",
+    "    \"customer_id\",\n",
+    "    \"customer_tier\",\n",
+    "    \"order_date\",\n",
+    "    col(\"item.product\").alias(\"product\"),\n",
+    "    col(\"item.price\").alias(\"price\"),\n",
+    "    col(\"item.category\").alias(\"category\")\n",
+    ")\n",
+    "\n",
+    "print(\"📊 Dane po explode - każdy produkt w osobnym wierszu:\")\n",
+    "basket_exploded.display()\n",
+    "\n",
+    "# Podsumowanie: ile rekordów przed i po explode\n",
+    "print(f\"\\n📈 Statystyki:\")\n",
+    "print(f\"   Zamówień (przed explode): {basket_df.count()}\")\n",
+    "print(f\"   Pozycji produktów (po explode): {basket_exploded.count()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c7a60ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analiza 1: Top 5 najpopularniejszych produktów\n",
+    "print(\"🏆 TOP 5 Najpopularniejszych produktów:\")\n",
+    "top_products = basket_exploded \\\n",
+    "    .groupBy(\"product\", \"category\") \\\n",
+    "    .agg(\n",
+    "        count(\"*\").alias(\"times_ordered\"),\n",
+    "        _sum(\"price\").alias(\"total_revenue\"),\n",
+    "        _round(avg(\"price\"), 2).alias(\"avg_price\")\n",
+    "    ) \\\n",
+    "    .orderBy(col(\"times_ordered\").desc()) \\\n",
+    "    .limit(5)\n",
+    "\n",
+    "top_products.display()\n",
+    "\n",
+    "# Analiza 2: Sprzedaż per kategoria\n",
+    "print(\"\\n📊 Sprzedaż per kategoria:\")\n",
+    "category_sales = basket_exploded \\\n",
+    "    .groupBy(\"category\") \\\n",
+    "    .agg(\n",
+    "        count(\"*\").alias(\"items_sold\"),\n",
+    "        _sum(\"price\").alias(\"revenue\"),\n",
+    "        _round(avg(\"price\"), 2).alias(\"avg_item_price\")\n",
+    "    ) \\\n",
+    "    .orderBy(col(\"revenue\").desc())\n",
+    "\n",
+    "category_sales.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8276ffda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analiza 3: Metryki koszyka zakupowego per zamówienie\n",
+    "print(\"🛒 Metryki koszyka zakupowego:\")\n",
+    "basket_metrics = basket_exploded \\\n",
+    "    .groupBy(\"order_id\", \"customer_id\", \"customer_tier\", \"order_date\") \\\n",
+    "    .agg(\n",
+    "        count(\"product\").alias(\"basket_size\"),\n",
+    "        _sum(\"price\").alias(\"order_total\"),\n",
+    "        _round(avg(\"price\"), 2).alias(\"avg_item_price\"),\n",
+    "        _max(\"price\").alias(\"most_expensive_item\"),\n",
+    "        count(when(col(\"category\") == \"Electronics\", 1)).alias(\"electronics_count\"),\n",
+    "        count(when(col(\"category\") == \"Accessories\", 1)).alias(\"accessories_count\")\n",
+    "    ) \\\n",
+    "    .orderBy(\"order_id\")\n",
+    "\n",
+    "basket_metrics.display()\n",
+    "\n",
+    "# Podsumowanie per tier klienta\n",
+    "print(\"\\n💎 Analiza per tier klienta:\")\n",
+    "tier_analysis = basket_metrics \\\n",
+    "    .groupBy(\"customer_tier\") \\\n",
+    "    .agg(\n",
+    "        count(\"order_id\").alias(\"orders_count\"),\n",
+    "        _round(avg(\"basket_size\"), 2).alias(\"avg_basket_size\"),\n",
+    "        _round(avg(\"order_total\"), 2).alias(\"avg_order_value\"),\n",
+    "        _sum(\"order_total\").alias(\"total_revenue\")\n",
+    "    ) \\\n",
+    "    .orderBy(col(\"total_revenue\").desc())\n",
+    "\n",
+    "tier_analysis.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15dfbdbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analiza 4: Market Basket Analysis - produkty kupowane razem\n",
+    "print(\"🔗 Produkty kupowane razem (Market Basket Analysis):\")\n",
+    "\n",
+    "# Przygotowanie: Self-join produktów z tego samego zamówienia\n",
+    "basket_pairs = basket_exploded.alias(\"a\") \\\n",
+    "    .join(\n",
+    "        basket_exploded.alias(\"b\"),\n",
+    "        (col(\"a.order_id\") == col(\"b.order_id\")) & \n",
+    "        (col(\"a.product\") < col(\"b.product\"))  # Unikamy duplikatów (A+B = B+A)\n",
+    "    ) \\\n",
+    "    .select(\n",
+    "        col(\"a.product\").alias(\"product_a\"),\n",
+    "        col(\"b.product\").alias(\"product_b\")\n",
+    "    )\n",
+    "\n",
+    "# Zlicz najczęstsze pary produktów\n",
+    "product_pairs_count = basket_pairs \\\n",
+    "    .groupBy(\"product_a\", \"product_b\") \\\n",
+    "    .agg(count(\"*\").alias(\"times_together\")) \\\n",
+    "    .orderBy(col(\"times_together\").desc())\n",
+    "\n",
+    "print(\"Top pary produktów kupowanych razem:\")\n",
+    "product_pairs_count.display()\n",
+    "\n",
+    "# Insight: Które produkty są najczęściej kupowane z Electronics?\n",
+    "print(\"\\n🔌 Produkty najczęściej kupowane z Electronics:\")\n",
+    "electronics_combos = basket_exploded.alias(\"e\") \\\n",
+    "    .join(\n",
+    "        basket_exploded.alias(\"a\"),\n",
+    "        (col(\"e.order_id\") == col(\"a.order_id\")) & \n",
+    "        (col(\"e.category\") == \"Electronics\") &\n",
+    "        (col(\"a.category\") != \"Electronics\")\n",
+    "    ) \\\n",
+    "    .groupBy(col(\"e.product\").alias(\"electronics_item\"), \n",
+    "             col(\"a.product\").alias(\"paired_with\")) \\\n",
+    "    .agg(count(\"*\").alias(\"combo_count\")) \\\n",
+    "    .orderBy(col(\"combo_count\").desc()) \\\n",
+    "    .limit(10)\n",
+    "\n",
+    "electronics_combos.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9033254",
+   "metadata": {},
+   "source": [
+    "### 💡 Kluczowe wnioski z przykładu\n",
+    "\n",
+    "**Co zrobiliśmy:**\n",
+    "1. ✅ Użyliśmy `explode()` do rozwinięcia zagnieżdżonych produktów (array of structs)\n",
+    "2. ✅ Obliczyliśmy metryki per produkt i kategoria\n",
+    "3. ✅ Przeanalizowaliśmy koszyki zakupowe (basket size, avg value)\n",
+    "4. ✅ Wykonaliśmy Market Basket Analysis (produkty kupowane razem)\n",
+    "\n",
+    "**Zastosowania biznesowe:**\n",
+    "- 🎯 **Rekomendacje produktów**: Produkty często kupowane razem\n",
+    "- 📊 **Analiza koszyka**: Średnia wartość, rozmiar per segment klienta\n",
+    "- 💰 **Cross-selling**: Które akcesoria sprzedawać z elektroniką\n",
+    "- 📈 **Revenue optimization**: Kategorie generujące największy przychód\n",
+    "\n",
+    "**Performance tips:**\n",
+    "- ⚠️ `explode()` zwiększa liczbę wierszy - używaj z filterem gdzie możliwe\n",
+    "- ✅ Po explode agreguj dane, aby zmniejszyć rozmiar\n",
+    "- ✅ Dla bardzo dużych arrayów rozważ partitioning przed explode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d5bf6393",
    "metadata": {},
    "source": [
